# openrouter-blueprint-template

./: .gitignore  CONFIGURATION.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  config.sample.json  foundry.toml  remappings.txt
ai/: build-script.md  cron.md  docktopus.md  eigenlayer.md  folder-architecture.md  import-paths.md  networking.md  round-based.md  shared-concepts.md  smart-contracts.md  tangle.md  testing-requirements.md
blueprints/ollama-blueprint/: Cargo.toml  README.md
blueprints/ollama-blueprint/src/: lib.rs
blueprints/ollama-blueprint/tests/: e2e.rs
blueprints/vllm-blueprint/: Cargo.toml  README.md
blueprints/vllm-blueprint/src/: lib.rs
blueprints/vllm-blueprint/tests/: e2e.rs
contracts/src/: OpenRouterBlueprint.sol
open-router-blueprint-template-bin/: Cargo.toml  build.rs
open-router-blueprint-template-bin/src/: main.rs
open-router-blueprint-template-lib/: Cargo.toml
open-router-blueprint-template-lib/src/: config.rs  context.rs  jobs.rs  lib.rs
open-router-blueprint-template-lib/src/llm/: local_llm.rs  mod.rs  models.rs  streaming.rs
open-router-blueprint-template-lib/src/load_balancer/: mod.rs
open-router-blueprint-template-lib/src/tests/: config_tests.rs  llm_tests.rs  load_balancer_tests.rs  mod.rs
open-router-blueprint-template-lib/tests/: e2e.rs  llm_request_test.rs  openrouter_models_endpoint_test.rs
