[workspace]
resolver = "2"
members = ["open-router-blueprint-template-lib", "open-router-blueprint-template-bin"]

[workspace.package]
version = "0.1.0"
description = "A Blueprint Template for using Open Router with a local LLM"
edition = "2024"
authors = ["Tjemmmic <mdtjemmes@proton.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/Tangle/open-router-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
open-router-blueprint-template-lib = { path = "open-router-blueprint-template-lib" }

blueprint-sdk = { version = "0.1.0-alpha.6", default-features = false }
tokio = { version = "1", default-features = false }
color-eyre = "0.6"
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"
