[package]
name = "open-router-blueprint-template-blueprint-bin"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
open-router-blueprint-template-lib = { path = "../open-router-blueprint-template-lib" }

blueprint-sdk = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tower.workspace = true

[build-dependencies]
open-router-blueprint-template-lib = { path = "../open-router-blueprint-template-lib" }
blueprint-sdk = { workspace = true, features = ["macros", "build"] }

[package.metadata.blueprint]
sources = [
    { type = "Native", owner = "Tangle", repo = "open-router-blueprint-template", tag = "0.1.0", binaries = [
        { arch = "Amd64", os = "Linux", name = "amd64-linux-open-router-blueprint-template-gadget" },
        { arch = "Arm64", os = "Linux", name = "arm64-linux-open-router-blueprint-template-gadget" }
    ] },
    { type = "Container", registry = "docker.io", image = "Tangle/open-router-blueprint-template", tag = "0.1.0" },
]
