[package]
name = "open-router-blueprint-template-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8.22"
serde_yaml = "0.9.30"
thiserror = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio-stream = { version = "0.1" }
tempfile = "3.10.1"

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
color-eyre = { workspace = true }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tower = { workspace = true }
