[package]
name = "ollama-blueprint"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
open-router-blueprint-template-lib = { path = "../../open-router-blueprint-template-lib" }
